@@ -150,7 +150,6 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
 <Module "Krang::CGI::MyPref">
   changed_password              "New password saved."
   changed_search_page_size      "'Search Results/Page' Updated."  
-  error_password_length		"Password must be at least 6 characters long."
 </Module>
 
 <Module "Krang::CGI::MyAlerts">
@@ -306,6 +305,10 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
 
 <Module "Krang::CGI::ListGroup">
  lists_saved "List Group saved."
+</Module>
+
+<Module "Krang::PasswordHandler">
+  error_password_length "Password must be at least 6 characters long."
 </Module>
 
 
